change searx to searxng
Signed-off-by: Zifan Hua <zifan.hua@icloud.com>

--- a/hetzner/searxng/uwsgi.ini
+++ b/hetzner/searxng/uwsgi.ini
@@ -4,8 +4,8 @@ uid = searxng
 gid = searxng
 
 # Number of workers (usually CPU count)
-workers = %k
-threads = 4
+workers = 1
+threads = 1
 
 # The right granted on the created socket
 chmod-socket = 666
@@ -15,7 +15,7 @@ single-interpreter = true
 master = true
 plugin = python3
 lazy-apps = true
-enable-threads = 4
+enable-threads = 1
 
 # Module to import
 module = searx.webapp
@@ -43,7 +43,7 @@ add-header = Connection: close
 static-map = /static=/usr/local/searxng/searx/static
 static-expires = /* 31557600
 static-gzip-all = True
-offload-threads = 4
+offload-threads = 1
 
 # Cache
 cache2 = name=searxngcache,items=2000,blocks=2000,blocksize=4096,bitmap=1
